fixed image covers on public gardens

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -320,7 +320,13 @@ h1, h2, h3, h4, h5, h6 {
 .plant-img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    background-position: center;
+    background-size: cover;
+}
+
+.img-row {
+    width: 100%;
+    height: 100%;
 }
 
 .autocomplete-container {
